# suit

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.claude/: launch.json
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/api/: faucet.js  relay.js
app/public/circuit/: RangeProof.wasm
app/src/: App.tsx  index.css
app/src/components/: AppShell.tsx  Landing.tsx  ReceiptsPanel.tsx  ReceivePanel.tsx  SendPanel.tsx  WalletButton.tsx
app/src/lib/: suit.ts  wallet.tsx
circuits/circom/: README.md  RangeProof.circom  Transaction.circom  Withdraw.circom  package-lock.json  package.json
circuits/circom/build_tx/: Transaction.r1cs  Transaction.sym  transaction_vk.hex  transaction_vk.json
circuits/circom/build_withdraw/: Withdraw.r1cs  Withdraw.sym  withdraw_input.json  withdraw_proof.hex  withdraw_proof.json  withdraw_public.hex  withdraw_public.json  withdraw_vk.json
circuits/circom/scripts/: prove.js  prove_tx.js  prove_withdraw.js  setup.js  setup_tx.js  setup_withdraw.js  verify_local.js
circuits/noir/: Nargo.toml  Prover.toml  README.md
circuits/noir/src/: main.nr
contracts/bn254_verifier/: Cargo.toml
contracts/bn254_verifier/src/: lib.rs  test.rs
contracts/bn254_verifier/src/test_data/: vk.hex
contracts/bn254_verifier/test_snapshots/test/: rejects_tampered_public_signals.1.json
contracts/groth16_verifier/: Cargo.toml
contracts/groth16_verifier/src/: lib.rs  (+1 more)
contracts/pool/: Cargo.toml  README.md
contracts/pool_v2/: Cargo.toml
contracts/pool_v2/src/: lib.rs  poseidon.rs  test.rs
contracts/pool_v2/test_snapshots/test/: deposit_inserts_and_changes_root.1.json  duplicate_commitment_rejected.1.json  withdraw_invalid_proof_rejected.1.json  withdraw_unknown_root_rejected.1.json  withdraw_with_valid_proof_pays_and_burns_nullifier.1.json
contracts/pool_v3/: Cargo.toml
contracts/poseidon_spike/: Cargo.toml
contracts/poseidon_spike/src/: lib.rs
scripts/: demo.sh  deploy_contracts.sh  deployed.env  diag_auth.js  diag_auth2.js  diag_exthash.js  install.sh  nova_bound_e2e.js  nova_e2e.js  nova_multileaf_test.js  nova_onchain_test.js  setup_circuits.sh  test_relayer.js  validate_browser_path.js  withdraw_demo.js  withdraw_integration.js
sdk/: README.md  package.json  tsconfig.json
sdk/src/: compliance.ts  crypto.ts  index.ts  pool.ts  proofs.ts  relayer.ts  signer.ts  snarkjs.d.ts  sync.ts  tree.ts  types.ts  viewing-key.ts
tools/circom_to_soroban_hex/: Cargo.toml
tools/circom_to_soroban_hex/src/: main.rs
(+26 files in other folders)
