[package]
name = "suit-bn254-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Real BN254 Groth16 verifier for the unlinkable-withdrawal proof (circom/bn128).
# Uses Stellar's BN254 pairing host functions (Protocol 26).

[dependencies]
soroban-sdk = { version = "26" }

[dev-dependencies]
soroban-sdk = { version = "26", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
